test/scc/expr/semantic-errors/149.a
149.t:6:21: error: too many initializer values